--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "hello-node",
+  "name": "murateren",
   "version": "0.0.1",
-  "description": "A simple Node app built on fastify, instantly up and running.",
-  "main": "server.js",
+  "description": "",
+  "main": "murat-eren.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node murat-eren.js"
   },
   "dependencies": {
-    "fastify": "^3.14.1",
-    "fastify-formbody": "^5.0.0",
-    "fastify-static": "^4.0.0",
-    "handlebars": "^4.7.7",
-    "point-of-view": "^4.14.0"
+    "discord.js": "^12.5.3"
   },
   "engines": {
     "node": "12.x"
