--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "can": "^6.6.0",
     "bad-words": "^3.0.3",
     "passport-google-oauth2": "^0.2.0",
-    "version": "^0.1.2",
-    "wio.db": "^4.0.20"
+    "version": "^0.1.2"
   },
   "engines": {
     "node": "12.x"
