🍕✍️ Checkpoint ./komutlar/a101.js:24327071/4 ./komutlar/alkış.js:24327071/286 ./komutlar/ara155.js:24327071/534 ./komutlar/yazan-kazanır.js:24327071/2239 ./package.json:30317047/2249

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "can": "^6.6.0",
     "bad-words": "^3.0.3",
     "passport-google-oauth2": "^0.2.0",
-    "version": "^0.1.2"
+    "version": "^0.1.2",
+    "node-superfetch": "^0.2.3"
   },
   "engines": {
     "node": "12.x"
