🎌🌼 Checkpoint ./komutlar/modlog.js:31239816/1393 ./komutlar/sa-as.js:31239816/573 ./server.js:31239816/700 ./komutlar/kedi.js:31239816/539 ./komutlar/yardım.js:31239816/1087 ./events/message.js:31239816/2 ./komutlar/oylinkim.js:31239816/453 ./komutlar/salakgif.js:31239816/544 ./komutlar/korona.js:31239816/1940 ./package.json:31239816/2309 ./komutlar/bansay.js:31239816/505 ./komutlar/sayaç.js:31239816/1484 ./komutlar/zar-at.js:31239816/413

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "bad-words": "^3.0.3",
     "passport-google-oauth2": "^0.2.0",
     "version": "^0.1.2",
-    "node-superfetch": "^0.2.3"
+    "node-superfetch": "^0.2.3",
+    "snekfetch": "^4.0.4"
   },
   "engines": {
     "node": "12.x"
